Delete more unnecessary content