@@ -1,4 +1,4 @@
-description = "t5app application"
+description = "Great Web Framework Shootout -- Tapestry 5.3.2"
 
 apply plugin: "war"
 apply plugin: "java"
@@ -35,25 +35,9 @@ sourceSets {
 dependencies {
 
     compile "org.apache.tapestry:tapestry-core:5.3.2"
+
     compile "org.xerial:sqlite-jdbc:3.7.2"
     compile "com.jolbox:bonecp:0.7.1.RELEASE"
 
     provided "javax.servlet:servlet-api:2.5"
 }
-
-test {
-    useTestNG()
-
-    options.suites("src/test/conf/testng.xml")
-
-    systemProperties["tapestry.service-reloading-enabled"] = "false"
-    systemProperties["tapestry.execution-mode"] = "development"
-
-    maxHeapSize = "600M"
-
-    jvmArgs("-XX:MaxPermSize=256M")
-
-    enableAssertions = true
-}
-
-// TODO: Configure execution mode for jettyRun task
